--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,7 +12,8 @@
     "@chainlink/contracts": "^0.1.9",
     "@openzeppelin/contracts": "^3.4.0",
     "@truffle/hdwallet-provider": "^1.2.1",
-    "dotenv": "^8.2.0"
+    "dotenv": "^8.2.0",
+    "surge": "^0.23.1"
   },
   "devDependencies": {
     "@chainlink/belt": "^0.0.4",
